created update lead and status api and made changes in pagination api
